--- a/entry-2/style.css
+++ b/entry-2/style.css
@@ -6,16 +6,19 @@
 
 .overlay-text {
   position: absolute;
-  top: 5vw; 
-  left: 22vw; 
-  transform: translate(-50%, -50%);  
+  top: 1vw; 
+  left: 2vw; 
   color: #ffffff; 
   padding: 10px 20px; 
   font-size: 8vw; 
-  opacity: .8;
+  opacity: .5;
   text-align: left;
 }
 
 body {
   margin: 0
+}
+
+body {
+  background-color: black;
 }
